bank-details functionality done

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -18,7 +18,7 @@
         <a class="nav-link" routerLink="myEvent" *ngIf="currentUser">MyEvent</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Add Bank Account</a>
+        <a class="nav-link" routerLink="bankDetails">Add Bank Account</a>
       </li>
       <li class="nav-item">
         <a class="nav-link" routerLink="reset-password" *ngIf="currentUser">Reset password</a>
