--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -47,8 +47,9 @@
   </div>
   <div class="sidebar">
     <ul>
-      <li><a routerLink="total-event"><i class="fa fa-desktop"></i><span>Total Events</span></a></li>
+      <li><a routerLink="admin-dashboard"><i class="fa fa-server"></i><span>Dashboard</span></a></li>
       <li><a routerLink="total-user"><i class="fa fa-server"></i><span>Total Users</span></a></li>
+      <li><a routerLink="total-event"><i class="fa fa-desktop"></i><span>Total Events</span></a></li>
       <li><a href="#"><i class="fa fa-calendar"></i><span>Settings</span></a></li>
       <li> <a href="#" (click)="logout()"><i class="fa fa-server"></i><span>LogOut</span></a></li>
     </ul>
