--- a/src/styles.css
+++ b/src/styles.css
@@ -1,4 +1,8 @@
 /* You can add global styles to this file, and also import other style files */
+
+@import url('https://fonts.googleapis.com/css?family=Russo+One|Ruthie|Sacramento&display=swap');
+body{font-family: 'Sacramento', cursive;}
+
 .load{
     height: 0;
     width: 0;
